--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static = "1.4.0"
 serde = "1.0.147"
 serde_derive = "1.0.147"
 figment = { version = "0.10.8", features = ["yaml"] }
-#webhook = "2.1.1"
+webhook = "2.1.2"
 
 [features]
 default = []
